--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-saga": "^0.16.2"
   },
   "scripts": {
